fix: modal visibility after footer

--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -1,6 +1,6 @@
 .modal
   &__overlay
-    visibility: hidden
+    display: none
     opacity: 0
     &--visible
       position: fixed
@@ -10,11 +10,11 @@
       bottom: 0
       background-color: rgba(0, 143, 223, 0.39)
       z-index: 100
-      visibility: visible
+      display: block
       opacity: 1
-      transition: opacity 0.3s ease
+      transition: opacity 0.9s ease
   &__dialog
-    visibility: hidden
+    display: none
     opacity: 0
     &--visible
       position: fixed
@@ -27,9 +27,9 @@
       color: $light
       border-radius: 8px
       z-index: 101
-      visibility: visible
+      display: block
       opacity: 1
-      transition: opacity 0.3s ease
+      transition: opacity 0.9s ease
   &__close
     position: absolute
     top: 17px
